@@ -1154,6 +1154,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			forceHighPrecision: false,
 			usePercentageResourceValues: false,
 			showNonApplicableButtons: false,
+			usePercentageConsumptionValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
 			hideDowngrade: false,
@@ -1423,6 +1424,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			forceHighPrecision: false,
 			usePercentageResourceValues: false,
 			showNonApplicableButtons: false,
+			usePercentageConsumptionValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
 			hideDowngrade: false,
